Settings: Add toggle for Smart 5G [2/2]
Change-Id: I72958e2313b48553ba82565ace8ebf5dd9e0cdf4
Signed-off-by: Daniel Jacob Chittoor <djchittoor47@gmail.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Sheshu Vadrevu <sheshuvadrevu@gmail.com>

--- a/res/xml/mobile_network_settings.xml
+++ b/res/xml/mobile_network_settings.xml
@@ -256,6 +256,13 @@
             android:summary="@string/nr_advanced_calling_summary"
             settings:keywords="@string/keywords_nr_advanced_calling"
             settings:controller="com.android.settings.network.telephony.NrAdvancedCallingPreferenceController"/>
+	
+	<SwitchPreference
+                android:key="smart_5g"
+                android:title="@string/smart_5g_title"
+                android:persistent="false"
+                android:summary="@string/smart_5g_summary"
+                settings:controller="com.android.settings.network.telephony.Smart5gPreferenceController"/>
     </PreferenceCategory>
 
     <Preference
