--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -386,4 +386,8 @@
     <string name="min_refresh_rate_title">Minimum refresh rate</string>
     <string name="max_refresh_rate_title">Maximum refresh rate</string>
 
+    <!-- Smart 5g -->
+    <string name="smart_5g_title">Smart 5G</string>
+    <string name="smart_5g_summary">Automatically switch between 5G and 4G to reduce battery consumption</string>
+
 </resources>
